# newswatch

./: .gitignore  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml
newswatch/: __init__.py  __main__.py  pipeline.py
tests/: test_pipeline.py
